# skillify

./: .gitignore  Dockerfile  Dockerfile.code-overlay  PLAN.md  README.md  TASKS.md  pyproject.toml
agent-host/: package-lock.json  package.json  tsconfig.json
docs/: 2026-07-15-skillify-endpoint-agent-ecosystem-master-plan.md  2026-07-16-endpoint-agent-plan.md  2026-07-16-endpoint-agent-tasks.md  2026-07-16-skillify-agent-architecture-convergence-plan.md  2026-07-16-skillify-agent-architecture-convergence-review-brief.md  2026-07-16-skillify-agent-architecture-convergence-task.md  2026-07-16-skillify-endpoint-mcp-and-agent-delegation-design-brief.md  2026-07-16-skillify-endpoint-mcp-and-agent-delegation-plan.md  2026-07-16-skillify-endpoint-mcp-and-agent-delegation-task.md  2026-07-18-skillify-shogun-team-runtime-integration-brief.md  2026-07-18-skillify-shogun-team-runtime-plan.md  2026-07-18-skillify-shogun-team-runtime-task.md  2026-07-19-skillify-codemap-visualization-direction-brief.md  2026-07-19-skillify-codemap-visualization-plan.md  2026-07-19-skillify-codemap-visualization-task.md  2026-07-20-shogun-431b86a-source-findings.md  2026-07-20-shogun-team-git-worktree-plan.md  2026-07-20-shogun-team-git-worktree-task.md  2026-07-20-shogun-tp13-direction.md  2026-07-20-skillify-shogun-team-unblock-task.md  2026-07-21-codemap-server-visualization-plan.md  2026-07-21-current-workspace-delivery-report.md  2026-07-21-post-ba3-followup-dev-tasks.md  Skillify 官方 Agent SDK 托管与 Web 决策闭环改造任务.md  agent-self-pull.md  claude-code-team-manual-approval.md  review-m0-m1.md  (+15 more)
(+536 files in other folders)
