[project]
name = "skillify"
version = "0.1.0"
description = "Skillify — private intranet Skills community: CLI, validator, packager, installer."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "requests>=2.31",
  "packaging>=24.0",
  "rich>=13.7",
  "mcp==1.28.1",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pyjwt[crypto]>=2.8",
  "python-multipart>=0.0.9",
  "tomli>=2.0; python_version < '3.11'",
  "dmpython==2.5.32",
  "dmsqlalchemy==2.0.12",
]

[project.scripts]
skillctl = "skillify.cli.main:app"
skillify-webhook = "skillify.webhook.app:run"
skillify-web = "skillify.web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillify"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: exercises real subprocesses (uv venv / uv pip install) — slower than unit tests",
]
